# conan-tensorflow

./: CMakeLists.txt  README.md  conanfile.py
src/: tensorflow.cpp  tensorflow.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
